--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-          flake8 . --count --extend-ignore=F401 --show-source --statistics
+          # E501: 行太長, W293: 空白行有空格, E302: 函數間隔少於兩行
+          flake8 . --count --ignore=E501,W293,E302,E261,W291,W292,F401 --show-source --statistics
 
       - name: SSH Deploy
         uses: appleboy/ssh-action@v1.0.3
