--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: root 
           key: ${{ secrets.SSH_KEY }}
+          port: 23
           script: |
             cd /home/jim/arcade
             git pull origin main
