--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,11 @@ jobs:
             git pull origin main
             ./venv/bin/python -m pip install -r requirements.txt
             
-            pkill -f "python app.py" || true
+            pkill -f "python app.py" > /dev/null 2>&1 || true
             sleep 2
             
-            nohup ./venv/bin/python app.py > server.log 2>&1 &
+            (nohup ./venv/bin/python app.py > server.log 2>&1 &)
             
-            sleep 2
+            sleep 1
+            echo "Deployment finished successfully."
             exit 0
