--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,15 +30,14 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           port: 23
           script: |
+            pkill -f "python app.py" || true
+            
             cd /home/jim/arcade
             git pull origin main
             ./venv/bin/python -m pip install -r requirements.txt
             
-            pkill -f "python app.py" > /dev/null 2>&1 || true
-            sleep 2
+            nohup ./venv/bin/python app.py </dev/null >server.log 2>&1 &
             
-            (nohup ./venv/bin/python app.py > server.log 2>&1 &)
-            
+            disown
             sleep 1
-            echo "Deployment finished successfully."
-            exit 0
+            echo "Deploy Done"
